# muninn-llm-rs

./: AGENTS.md  Cargo.toml  PLAN.md  PLAN_V2.md  README.md
src/: client_anthropic.rs  client_anthropic_test.rs  client_openai.rs  client_openai_test.rs  config.rs  config_test.rs  error.rs  lib.rs  prompt_bundle.rs  prompt_bundle_test.rs  types.rs
src/bundler/: commandments.md
src/llm/: chat.rs  chat_test.rs  mod.rs
src/room/: handlers.rs  message.rs  message_test.rs  mod.rs  mod_test.rs  state.rs  state_test.rs  worker.rs
tests/: hygiene.rs
