[package]
name = "muninn-llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "LLM tool/context/ReAct/room loop for the Muninn kernel family"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ianzepp/muninn-llm-rs"
homepage = "https://github.com/ianzepp/muninn-llm-rs"
documentation = "https://github.com/ianzepp/muninn-llm-rs"
keywords = ["llm", "agent", "react", "frames", "kernel"]
categories = ["asynchronous", "network-programming"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
muninn-kernel = { git = "https://github.com/ianzepp/muninn-kernel-rs" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
